--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serenity = {version = "0.10", default-features = false, features = ["client", "g
 tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
 toml = "0.5"
 serde = "1.0"
+chrono = "0.4"
+lazy_static = "1.4.0"
