--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde = "1.0"
 chrono = "0.4"
 lazy_static = "1.4.0"
 rusqlite = {version = "0.26.0", features = ["bundled"]}
+envy = "0.4.2"
+postgres = "0.19.2"
